...
  static const Map<String, dynamic> en = {
    // 공통
    '검색': 'Search',
    '알림': 'Notifications',
    '알림 설정': 'Notification Settings',
    '접기': 'Less',
    '돌아가기': 'Back',
    '이름없음': 'No name',
    '로그인': 'Login',
    '로그아웃': 'Logout',
    '로그인이 필요합니다': 'Login required',
    '로그인 해주세요': 'Please login',
    '로그인하여 모든 기능을 이용하세요': 'Login to access all features',
...
    '파일 업로드 실패': 'File upload failed',

    // 공유 받기
    '공유 받기': 'Receive Share',
    '게시글 또는 채팅 선택': 'Choose Post or Chat',
    '채팅 선택': 'Choose Chat',
    '게시글 작성': 'Create Post',
    '채팅 친구에게 보내기': 'Send to chat friend',
    '2. 보낼 친구를 선택하세요': '2. Select a friend to send',
    '2. 게시할 카테고리를 선택하세요': '2. Select a category to post',
    '보내기': 'Send',
    '열기': 'Open',
    '이름 없음': 'no name',
...
