...
  String get companyDirectoryTitle => 'Company Directory';

  @override
  String get myCompanySection => 'My Company';

  @override
  String get addCompany => 'Add Company';

  @override
  String get companyDirectoryDescription =>
      'When you register a company, it will be displayed in the navigation bar and other locations, making it visible to more users.';

  @override
...
